--- a/.github/workflows/unzip-jni.yml
+++ b/.github/workflows/unzip-jni.yml
@@ -1,36 +1,27 @@
-# .github/workflows/unzip-jni.yml
-name: Unzip JNI
-
-permissions:
-  contents: write
+name: Unzip JNI File
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # تشغيل يدوي من واجهة GitHub
+  push:
+    paths:
+      - 'jni.zip' # يُفعّل عند رفع/تحديث jni.zip
 
 jobs:
   unzip:
     runs-on: ubuntu-latest
     steps:
-      # 1. Checkout using the PAT المخزّن في Secrets.ASD
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.ASD }}
-          persist-credentials: false
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      # 2. فك الضغط إلى الجذر
-      - name: Unzip jni.zip
-        run: unzip jni.zip -d .
-
-      # 3. إعداد Git للاعتماد
-      - name: Set up Git
+      - name: Unzip File
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          unzip jni.zip -d unzipped/  # فك الضغط لمجلد "unzipped"
+          rm jni.zip  # (اختياري) حذف الملف المضغوط بعد الفك
 
-      # 4. إضافة التغييرات ورفعها
-      - name: Commit & Push
+      - name: Commit Changes
         run: |
-          git add jni/
-          git commit -m "Unzip JNI folder" || echo "No changes to commit"
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add .
+          git commit -m "Unzipped jni.zip"
           git push
