--- a/.github/workflows/unzip-jni.yml
+++ b/.github/workflows/unzip-jni.yml
@@ -1,27 +1,21 @@
-name: Unzip JNI File
+name: Unzip JNI
 
 on:
-  workflow_dispatch: # تشغيل يدوي من واجهة GitHub
   push:
     paths:
-      - 'jni.zip' # يُفعّل عند رفع/تحديث jni.zip
+      - 'jni.zip'
 
 jobs:
   unzip:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Unzip File
+      - uses: actions/checkout@v4
+      - name: Unzip jni.zip
+        run: unzip jni.zip -d jni_unzipped
+      - name: Commit unzipped files
         run: |
-          unzip jni.zip -d unzipped/  # فك الضغط لمجلد "unzipped"
-          rm jni.zip  # (اختياري) حذف الملف المضغوط بعد الفك
-
-      - name: Commit Changes
-        run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add .
-          git commit -m "Unzipped jni.zip"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions"
+          git add jni_unzipped
+          git commit -m "Unzipped jni.zip automatically" || echo "No changes to commit"
           git push
